--- a/app/src/main/res/layout/cell_all_passwords_groups.xml
+++ b/app/src/main/res/layout/cell_all_passwords_groups.xml
@@ -12,6 +12,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:padding="6dp">
 
         <LinearLayout
@@ -29,24 +31,26 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
-                android:layout_weight="1"
+                android:layout_weight="90"
                 android:background="@android:color/transparent"
                 android:fontFamily="@font/popings_medium_500"
                 android:padding="0dp"
-                android:text="Netflix"
                 android:textAlignment="textStart"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_moreOptions"
+                style="@style/Widget.Material3.Button.IconButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:padding="5dp"
-                android:src="@drawable/ic_more_option_vert_24" />
+                android:layout_weight="10"
+                app:icon="@drawable/ic_more_horiz_24"
+                app:iconGravity="textEnd"
+                app:iconSize="20dp"
+                app:iconTint="@color/gray_dark_700" />
 
         </LinearLayout>
 
