--- a/app/src/main/res/layout/bottom_sheet_movements.xml
+++ b/app/src/main/res/layout/bottom_sheet_movements.xml
@@ -8,9 +8,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         style="@style/ThemeOverlay.MaterialComponents.BottomSheetDialog"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-        android:layout_marginBottom="50dp">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        android:padding="16dp">
 
         <!-- Drag handle for accessibility -->
         <com.google.android.material.bottomsheet.BottomSheetDragHandleView
@@ -44,26 +44,54 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <com.google.android.material.button.MaterialButtonToggleGroup
+            android:id="@+id/toggle_typeMovement"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:orientation="vertical"
+            app:singleSelection="true"
+            app:selectionRequired="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/efab_save">
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_typeIncome"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/income" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_typeExpense"
+                style="?attr/materialButtonOutlinedStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/expense" />
+        </com.google.android.material.button.MaterialButtonToggleGroup>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toggle_typeMovement">
+
             <!-- Title -->
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_title"
+                android:id="@+id/til_concept"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:hint="@string/title">
+                android:hint="@string/concept">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_title"
+                    android:id="@+id/et_concept"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -73,135 +101,45 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-            <!-- Start Time -->
+            <!-- Date -->
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_due_date"
+                android:id="@+id/til_date"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_weight="50"
-                android:hint="@string/due_date">
+                android:hint="@string/date">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_due_date"
+                    android:id="@+id/et_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:focusable="false"
                     android:inputType="text"
                     android:maxLines="1"
-                    android:focusable="false"
-                    android:clickable="false"
                     android:textAppearance="?attr/textAppearanceSubtitle1" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Color Tag -->
+            <!-- Amount -->
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_color_tag"
+                android:id="@+id/til_amount"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:hint="@string/select_a_color"
-                app:startIconDrawable="@drawable/ic_circle_24"
-                app:startIconTint="@color/primaryColor">
+                android:layout_marginTop="8dp"
+                android:hint="@string/amount">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_color_tag"
+                    android:id="@+id/et_amount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:clickable="false"
-                    android:focusable="false"
-                    android:inputType="text"
+                    android:inputType="numberDecimal"
                     android:maxLines="1"
                     android:textAppearance="?attr/textAppearanceSubtitle1" />
 
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <!-- Category -->
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp">
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/til_category"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="15dp"
-                    android:hint="@string/category"
-                    app:layout_constraintEnd_toStartOf="@+id/btn_addCategory"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_category"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="text"
-                        android:maxLines="1"
-                        android:textAppearance="?attr/textAppearanceSubtitle1" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_addCategory"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/add"
-                    android:layout_marginTop="5dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/til_category"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/til_category" />
-
-                <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/cg_category"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/til_category"
-                    app:singleSelection="true" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <!-- Status -->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_status"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:hint="@string/status">
-
-                <AutoCompleteTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:clickable="false"
-                    android:focusable="false"
-                    android:text="Completed" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <!-- Priority -->
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/til_priority"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:hint="@string/priority">
-
-                <AutoCompleteTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:clickable="false"
-                    android:focusable="false"
-                    android:text="Once" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <!-- Description -->
@@ -217,8 +155,7 @@
                     android:id="@+id/et_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="top"
-
+                    android:layout_weight="1"
                     android:inputType="textMultiLine"
                     android:textAppearance="?attr/textAppearanceSubtitle1" />
 
