--- a/app/src/main/res/layout/cell_calendar_events.xml
+++ b/app/src/main/res/layout/cell_calendar_events.xml
@@ -1,43 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cl_eventArea"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="3dp"
-    android:background="@android:color/transparent"
-    android:orientation="horizontal">
+    android:id="@+id/cv_eventArea"
+    android:background="@android:color/transparent">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/civ_colorTag"
-        android:layout_width="15dp"
-        android:layout_height="0dp"
-        android:elevation="1dp"
-        app:cardCornerRadius="40dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_eventTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tv_eventType" />
-
-    <TextView
-        android:id="@+id/tv_eventType"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:fontFamily="@font/popings_regular_400"
-        android:text="Type"
-        android:textSize="12sp"
-        app:layout_constraintStart_toEndOf="@+id/civ_colorTag"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="3dp"
+        android:paddingStart="3dp"
+        android:paddingEnd="3dp">
 
-    <TextView
-        android:id="@+id/tv_eventTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:fontFamily="@font/popings_medium_500"
-        android:text="Title child"
-        android:textSize="15sp"
-        app:layout_constraintStart_toEndOf="@+id/civ_colorTag"
-        app:layout_constraintTop_toBottomOf="@+id/tv_eventType" />
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/civ_colorTag"
+            android:layout_width="15dp"
+            android:layout_height="0dp"
+            android:elevation="1dp"
+            app:cardCornerRadius="40dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_eventTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/tv_eventType" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tv_eventType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:fontFamily="@font/popings_regular_400"
+            android:text="Type"
+            android:textSize="12sp"
+            app:layout_constraintStart_toEndOf="@+id/civ_colorTag"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_eventTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:fontFamily="@font/popings_medium_500"
+            android:text="Title child"
+            android:textSize="15sp"
+            app:layout_constraintStart_toEndOf="@+id/civ_colorTag"
+            app:layout_constraintTop_toBottomOf="@+id/tv_eventType" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</com.google.android.material.card.MaterialCardView>
